<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuListOptionTitle"
        android:title="@string/all"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menuListOptionAll"
                android:title="@string/all"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menuListOptionNotDone"
                android:title="@string/not_done"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menuListOptionDone"
                android:title="@string/done"
                app:showAsAction="never"/>
        </menu>
    </item>


</menu>
